Contract Configurator 1.7.5
- Fixed issue with hidden parameters in a sequence not unhiding in Contracts Window +.

Contract Configurator 1.7.4
- Improved Sigma Binary support (contracts won't get offered for barycenters unless they've been specifically written with that in mind).
- Changed triggers for Message behaviour to make consistent with other similar behaviours.
- Fixed issue with loading settings when a contract pack is removed (thanks hyper1on).
- Fixed duplication issue with settings app launcher icon (thanks ObsessedWithKSP).
- Fixed issues with hidden parameters being a little to aggressive in hiding children.
- Fixed completely broken Exclude and ExcludeAll methods (whoops).
- Fixed FacilityRequirement to actually work outside the space center.
- Fixed rare contract load exception from part modules without a name field.
- Fixed issue with conversions from Vessel to VesselIdentifier (thanks severedsolo).
- Fixed errors in log from loading using legacy values on ChangeVesselOwnership and other behaviours.  Now correctly outputs a warning.

Contract Configurator 1.7.3
- Added Round() function for rounding numeric values.
- Contracts will now expire out of the pre-loader after a few Kerbin days.  Help prevent contracts that may no longer be valid from being generated.
- Fixed issue with hidden parameters not actually being hidden (thanks 5thHorseman).
- Fixed issue with using subject with CollectScience (thanks severedsolo).
- Fixed issue using Biome with uniqueValue in a DATA node (thanks severedsolo).
- Fixed issue where disabling a contract pack doesn't save the fact that it is disabled (thanks Poodmund).

Contract Configurator 1.7.2
- DialogBox behaviour now supports loading/unloading textures for images on the fly.
- Fixed issue with dialog boxes that weren't getting positioned correctly.
- Fixed issue with SpawnVessel when switching from editor to flight scene (introduced in 1.7.0).