@@ -1,5 +1,6 @@
 Contract Configurator 1.7.5
 - Fixed issue with hidden parameters in a sequence not unhiding in Contracts Window +.
+- Added Round function for Duration class.
 
 Contract Configurator 1.7.4
 - Improved Sigma Binary support (contracts won't get offered for barycenters unless they've been specifically written with that in mind).
